# libroyale

./: .gitignore
libroyale-1.0.5.40-APPLE-64Bit/: CHANGELOG.txt
libroyale-1.0.5.40-APPLE-64Bit/doc/html/: _callback_data_8cs.html  _camera_capture_mode_8cs.html  _camera_capture_mode_8hpp.html  _camera_capture_mode_8hpp_source.html  _camera_device_8cs.html  _camera_factory_8cs.html  _camera_factory_8hpp.html  _camera_factory_8hpp_source.html  _camera_manager_8cs.html  _camera_manager_8hpp.html  _camera_manager_8hpp_source.html  _camera_settings_default_8hpp.html  _camera_settings_default_8hpp_source.html  _camera_type_8hpp.html  _camera_type_8hpp_source.html  _definitions_8hpp.html  _definitions_8hpp_source.html  _depth_data_8cs.html  _depth_data_8hpp.html  _depth_data_8hpp_source.html  _depth_data_listener_8cs.html  _exposure_limits_8cs.html  _exposure_listener_8cs.html  _exposure_mode_8cs.html  _exposure_mode_8hpp.html  _exposure_mode_8hpp_source.html  _extended_data_8cs.html  _extended_data_listener_8cs.html  _i_camera_device_8hpp.html  _i_camera_device_8hpp_source.html  _i_camera_settings_8hpp.html  _i_camera_settings_8hpp_source.html  _i_depth_data_listener_8hpp.html  _i_depth_data_listener_8hpp_source.html  _i_depth_data_releaser_8hpp.html  _i_depth_data_releaser_8hpp_source.html  _i_exposure_listener_8hpp.html  _i_exposure_listener_8hpp_source.html  _i_extended_data_8hpp.html  _i_extended_data_8hpp_source.html  (+239 more)
libroyale-1.0.5.40-APPLE-64Bit/include/: royale.hpp
libroyale-1.0.5.40-APPLE-64Bit/include/royale/: CameraCaptureMode.hpp  CameraFactory.hpp  CameraManager.hpp  (+23 more)
libroyale-1.0.5.40-APPLE-64Bit/samples/processing/: CMakeLists.txt  Timer.h  constant.h  filter.cpp  filter.h  main.cpp  pairwise.cpp  pairwise.h  resample.cpp  resample.h  triangulation.h
libroyale-1.0.5.40-APPLE-64Bit/samples/processing/Release/: processing  processing_incremental
libroyale-1.0.5.40-APPLE-64Bit/samples/sample2/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  sample2.cpp
libroyale-1.0.5.40-APPLE-64Bit/samples/sample2/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelease  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeDebug  sample2_postBuildPhase.makeDebug  sample2_postBuildPhase.makeMinSizeRel  sample2_postBuildPhase.makeRelWithDebInfo  sample2_postBuildPhase.makeRelease
libroyale-1.0.5.40-APPLE-64Bit/samples/sample2/Debug/: sample2
libroyale-1.0.5.40-APPLE-64Bit/samples/sample2/sample2.build/Debug/ALL_BUILD.build/: Script-572CF23FAC1F42A58E3484D7.sh  dgph  dgph~
libroyale-1.0.5.40-APPLE-64Bit/samples/sample2/sample2.build/Debug/ZERO_CHECK.build/: Script-CC067AC5B7864C38ABC6B760.sh  dgph  dgph~
libroyale-1.0.5.40-APPLE-64Bit/samples/sample2/sample2.build/Debug/sample2.build/: Script-985948E0998D452D9F7E6B84.sh  dgph  dgph~
libroyale-1.0.5.40-APPLE-64Bit/samples/sample2/sample2.build/Debug/sample2.build/Objects-normal/x86_64/: sample2.LinkFileList  sample2.d
libroyale-1.0.5.40-APPLE-64Bit/samples/sample2/sample2.xcodeproj/: project.pbxproj
libroyale-1.0.5.40-APPLE-64Bit/samples/sample2/sample2.xcodeproj/project.xcworkspace/xcuserdata/zhuda.xcuserdatad/: UserInterfaceState.xcuserstate
libroyale-1.0.5.40-APPLE-64Bit/samples/sample2/sample2.xcodeproj/xcuserdata/zhuda.xcuserdatad/xcschemes/: ALL_BUILD.xcscheme  ZERO_CHECK.xcscheme  sample2.xcscheme  xcschememanagement.plist
libroyale-1.0.5.40-APPLE-64Bit/samples/scanner/: CMakeLists.txt  main.cpp
libroyale-1.0.5.40-APPLE-64Bit/samples/triangulation-bspline_fitting_viewer/: 3dm_viewer.cpp  CMakeLists.txt
libroyale-1.0.5.40-APPLE-64Bit/share/: royale-config.cmake
(+141 files in other folders)
